--- a/The Last Dance/BancaDelTempo/BancaDelTempo.Client/Master.Master
+++ b/The Last Dance/BancaDelTempo/BancaDelTempo.Client/Master.Master
@@ -21,7 +21,12 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
-                        <asp:ContentPlaceHolder ID="links" runat="server"></asp:ContentPlaceHolder>
+                        <asp:ContentPlaceHolder ID="links" runat="server">
+
+                        </asp:ContentPlaceHolder>
+                        <li>
+                            <asp:Label ID="lblUsername" runat="server"></asp:Label>
+                        </li>
                     </ul>
                 </div>
               </div>
